Update 404 page image by @guiluchesi

--- a/404.md
+++ b/404.md
@@ -1,12 +1,12 @@
 ---
 layout: page
 css_class: page-404
-title: "404... #partiudormir"
+title: "Eita! Não encontramos essa página"
 permalink: /404.html
 hide: true
 ---
 
-<i class="fa fa-bed"></i>
+![Página não encontrada 404]({{ "public/assets/img/404.png" | prepend: site.baseurl }})
 
 <a class="btn" href="{{ site.baseurl }}">
   Prefiro voltar para a página inicial
