--- a/_posts/2016-07-01-ux.md
+++ b/_posts/2016-07-01-ux.md
@@ -4,12 +4,12 @@ title: DNE 60 - UX
 cast: 271662125-devnaestrada-devnaestrada-60-ux.mp3
 cast-length: "88504117"
 cast-time: "01:01:24"
-description: "No episódio de hoje @femontanha e Paulo Fauton navegam em áreas misteriosas e vão até o fim do mundo para tentar explicar o que é UX."
+description: "No episódio de hoje @femontanha e Paulo Fanton navegam em áreas misteriosas e vão até o fim do mundo para tentar explicar o que é UX."
 soundcloud-id: "271662125"
 soundcloud-post-image: "000169669861-ce7u4e"
 ---
 
-No episódio de hoje @femontanha e Paulo Fauton navegam em áreas misteriosas e vão até o fim do mundo para tentar explicar o que é UX. 
+No episódio de hoje @femontanha e Paulo Fanton navegam em áreas misteriosas e vão até o fim do mundo para tentar explicar o que é UX. 
 
 Falamos sobre o papel do UX, mobile, a diferença entre UI e UX, performance e claro... A importância do inglês para os profissionais desta área.
 
@@ -24,6 +24,20 @@ Falamos sobre o papel do UX, mobile, a diferença entre UI e UX, performance e c
 [Loggi](https://www.loggi.com/)
 
 [FrontUX](http://frontux.com/)
+
+[Interaction design fundation](https://www.interaction-design.org/courses)
+
+[Interaction Design: Coursera](https://www.coursera.org/specializations/interaction-design)
+
+[Hack design](https://hackdesign.org)
+
+[Ux mastery](http://uxmastery.libsyn.com/rss)
+
+[Ux Podcast](http://uxpodcast.com)
+
+[Ux and growth podcast](http://www.uxandgrowth.com)
+
+[Movimento UX](https://soundcloud.com/movimento-ux/)
 
 <h2>Próximos Eventos</h2>
 
