Adding Luis Felipe twitter

--- a/_posts/2016-07-15-frontinsampa-2016.md
+++ b/_posts/2016-07-15-frontinsampa-2016.md
@@ -4,12 +4,12 @@ title: DNE 62 - Frontinsampa 2016
 cast: 273756395-devnaestrada-devnaestrada-62-frontinsampa-2016.mp3
 cast-length: "137923344"
 cast-time: "00:57:25"
-description: "Hoje, @femontanha, @raymonsanches, Luís Felipe Sousa e @danisoldera se juntam para falar sobre o último FrontInSampa. Fizemos uma análise sobre todo o evento e fornecemos nosso ponto de vista sobre cada palestra que rolou nesse mega evento."
+description: "Hoje, @femontanha, @raymonsanches, @luisfmsouz e @danisoldera se juntam para falar sobre o último FrontInSampa. Fizemos uma análise sobre todo o evento e fornecemos nosso ponto de vista sobre cada palestra que rolou nesse mega evento."
 soundcloud-id: "273756395"
 soundcloud-post-image: "000171531714-6cpt2q"
 ---
 
-Hoje, @femontanha, @raymonsanches, Luís Felipe Sousa e @danisoldera se juntam para falar sobre o último FrontInSampa.
+Hoje, @femontanha, @raymonsanches, @luisfmsouz e @danisoldera se juntam para falar sobre o último FrontInSampa.
 Fizemos uma análise sobre todo o evento e fornecemos nosso ponto de vista sobre cada palestra que rolou nesse mega evento.
 
 <a href="http://www.apoia.se/devnaestrada" class="btn">
