Normalize all links for episodes

--- a/_posts/2016-07-15-frontinsampa-2016.md
+++ b/_posts/2016-07-15-frontinsampa-2016.md
@@ -12,26 +12,4 @@ soundcloud-post-image: "000171531714-6cpt2q"
 Hoje, @femontanha, @raymonsanches, @luisfmsouz e @danisoldera se juntam para falar sobre o último FrontInSampa.
 Fizemos uma análise sobre todo o evento e fornecemos nosso ponto de vista sobre cada palestra que rolou nesse mega evento.
 
-<a href="http://www.apoia.se/devnaestrada" class="btn">
-  Também quero apoiar!
-</a>
-
-<h2>Próximos Eventos</h2>
-
-[Desconto de R$ 30,00 no FrontInBH](https://www.facebook.com/FrontInBH/posts/1213434982013483)
-
-[BrazilJSConf](https://braziljs.org/conf)
-
-[FrontInBH](http://frontinbh.com.br/)
-
-[PHPSP + IMA](http://phpspima.com.br/)
-
-<h2>Parceiros</h2>
-
-[Contratado.me](https://contratado.me)
-
-[Vanhack](https://www.vanhack.com/)
-
-[Alura](https://www.alura.com.br/)
-
-[StickersDevs](https://www.stickersdevs.com.br/)
+{% include modules/post-extras.html %}
