--- a/_posts/2016-07-01-ux.md
+++ b/_posts/2016-07-01-ux.md
@@ -7,56 +7,41 @@ cast-time: "01:01:24"
 description: "No episódio de hoje @femontanha e Paulo Fanton navegam em áreas misteriosas e vão até o fim do mundo para tentar explicar o que é UX."
 soundcloud-id: "271662125"
 soundcloud-post-image: "000169669861-ce7u4e"
+links:
+  -
+    name: "Paulo Fanton Linkedin"
+    url: "https://www.linkedin.com/in/paulofanton/en"
+  -
+    name: "Loggi"
+    url: "https://www.loggi.com"
+  -
+    name: "FrontUX"
+    url: "http://frontux.com"
+  -
+    name: "Interaction design fundation"
+    url: "https://www.interaction-design.org/courses"
+  -
+    name: "Interaction Design: Coursera"
+    url: "https://www.coursera.org/specializations/interaction-design"
+  -
+    name: "Hack design"
+    url: "https://hackdesign.org"
+  -
+    name: "UX Mastery"
+    url: "http://uxmastery.libsyn.com/rss"
+  -
+    name: "UX Podcast"
+    url: "http://uxpodcast.com"
+  -
+    name: "UX and Growth Podcast"
+    url: "http://www.uxandgrowth.com"
+  -
+    name: "Movimento UX"
+    url: "https://soundcloud.com/movimento-ux"
 ---
 
 No episódio de hoje @femontanha e Paulo Fanton navegam em áreas misteriosas e vão até o fim do mundo para tentar explicar o que é UX. 
 
 Falamos sobre o papel do UX, mobile, a diferença entre UI e UX, performance e claro... A importância do inglês para os profissionais desta área.
 
-<a href="http://www.apoia.se/devnaestrada" class="btn">
-  Também quero apoiar!
-</a>
-
-<h2>Links do episódio</h2>
-
-[Paulo Fanton Linkedin](https://www.linkedin.com/in/paulofanton/en)
-
-[Loggi](https://www.loggi.com/)
-
-[FrontUX](http://frontux.com/)
-
-[Interaction design fundation](https://www.interaction-design.org/courses)
-
-[Interaction Design: Coursera](https://www.coursera.org/specializations/interaction-design)
-
-[Hack design](https://hackdesign.org)
-
-[Ux mastery](http://uxmastery.libsyn.com/rss)
-
-[Ux Podcast](http://uxpodcast.com)
-
-[Ux and growth podcast](http://www.uxandgrowth.com)
-
-[Movimento UX](https://soundcloud.com/movimento-ux/)
-
-<h2>Próximos Eventos</h2>
-
-[NodeConfBR](http://brazil.nodeconf.com)
-
-[BrazilJSConf](https://braziljs.org/conf)
-
-[Frontinsampa](http://frontinsampa.com.br/)
-
-[frontinbh](http://frontinbh.com.br/)
-
-[PHPSPIMA](http://phpspima.com.br/)
-
-[TDC 2016](http://www.thedevelopersconference.com.br/tdc/2016/)
-
-<h2>Parceiros</h2>
-
-[Contratado.me](https://contratado.me)
-
-[Vanhack](https://www.vanhack.com/)
-
-[StickersDevs](https://www.stickersdevs.com.br)
+{% include modules/post-extras.html %}
