add home-name and type for every post

--- a/_posts/2016-07-01-ux.md
+++ b/_posts/2016-07-01-ux.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: DNE 60 - UX
+home-title: "UX"
+type: "Pauta"
 cast: 271662125-devnaestrada-devnaestrada-60-ux.mp3
 cast-length: "88504117"
 cast-time: "01:01:24"
