--- a/_posts/2016-07-15-frontinsampa-2016.md
+++ b/_posts/2016-07-15-frontinsampa-2016.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: DNE 62 - Frontinsampa 2016
+home-title: "Frontinsampa 2016"
+type: "Pauta"
 cast: 273756395-devnaestrada-devnaestrada-62-frontinsampa-2016.mp3
 cast-length: "137923344"
 cast-time: "00:57:25"
