Add some styles to post participants section

--- a/_posts/2016-07-15-frontinsampa-2016.md
+++ b/_posts/2016-07-15-frontinsampa-2016.md
@@ -9,6 +9,19 @@ cast-time: "00:57:25"
 description: "Hoje, @femontanha, @raymonsanches, @luisfmsouz e @danisoldera se juntam para falar sobre o último FrontInSampa. Fizemos uma análise sobre todo o evento e fornecemos nosso ponto de vista sobre cada palestra que rolou nesse mega evento."
 soundcloud-id: "273756395"
 soundcloud-post-image: "000171531714-6cpt2q"
+participants:
+  -
+    name: Fellipe Azambuja
+    twitter: femontanha
+  -
+    name: Ramon Sanches
+    twitter: raymonsanches
+  -
+    name: Dani Soldera
+    twitter: danisoldera
+  -
+    name: Luís Felipe
+    twitter: luisfmsouz
 ---
 
 Hoje, @femontanha, @raymonsanches, @luisfmsouz e @danisoldera se juntam para falar sobre o último FrontInSampa.
