Adding twitter participants links
Add participatns info on each episode

--- a/_posts/2016-07-01-ux.md
+++ b/_posts/2016-07-01-ux.md
@@ -9,6 +9,13 @@ cast-time: "01:01:24"
 description: "No episódio de hoje @femontanha e Paulo Fanton navegam em áreas misteriosas e vão até o fim do mundo para tentar explicar o que é UX."
 soundcloud-id: "271662125"
 soundcloud-post-image: "000169669861-ce7u4e"
+participants:
+  -
+    name: Fellipe Azambuja
+    twitter: femontanha
+  -
+    name: Ramon Sanches
+    twitter: raymonsanches
 links:
   -
     name: "Paulo Fanton Linkedin"
