PUBLISH PUBLISH PUBLISH

--- a/_posts/2016-09-23-hackaton.md
+++ b/_posts/2016-09-23-hackaton.md
@@ -3,12 +3,12 @@ layout: post
 title: DNE 72 - Hackaton
 home-title: "Hackaton"
 type: "Pauta"
-cast: 283131036-devnaestrada-devnaestrada-70-bruno-genaro.mp3
-cast-length: ""
-cast-time: ""
-description: ""
-soundcloud-id: "283131036"
-soundcloud-post-image: "000182825291-vhq1te"
+cast: 284235414-devnaestrada-devnaestrada-72-hackathons.mp3
+cast-length: "29772560"
+cast-time: "00:41:16"
+description: "Essa semana falamos sobre hackathons! Muita coisa legal e um papo descontraído pra entendermos um pouco mais sobre como esses eventos funcionam. "
+soundcloud-id: "284235414"
+soundcloud-post-image: "000184579867-4v08ii"
 participants:
   -
     name: Andre Souza
@@ -33,13 +33,15 @@ links:
     name: "Desconto na VanHackaton"
     url: "http://bit.ly/dne-vanhackaton-voucher"
   -
+    name: "Projeto do Andre Gumieri"
+    url: "https://github.com/andregumieri/vanhackathon-broadbandtv"
+  -
+    name: "Projeto do Andre Souza"
+    url: "https://github.com/andresouza/mastermind"
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Essa semana falamos sobre hackathons! Muita coisa legal e um papo descontraído pra entendermos um pouco mais sobre como esses eventos funcionam. 
+
+@femontanha, @raymonsanches e @andregumieri, @andre4souza que já participaram de um hackathon contam suas motivações, suas experiências e o que aprenderam participando de eventos como este.
 
 {% include modules/post-extras.html %}
