fix image dne 72

--- a/_posts/2016-09-23-hackaton.md
+++ b/_posts/2016-09-23-hackaton.md
@@ -8,7 +8,7 @@ cast-length: "29772560"
 cast-time: "00:41:16"
 description: "Essa semana falamos sobre hackathons! Muita coisa legal e um papo descontraído pra entendermos um pouco mais sobre como esses eventos funcionam. "
 soundcloud-id: "284235414"
-soundcloud-post-image: "000184579867-4v08ii"
+soundcloud-post-image: "000184580523-m9rf5b"
 participants:
   -
     name: Andre Souza
