Fixing PotHix cast links

--- a/_posts/2016-10-28-pothix.md
+++ b/_posts/2016-10-28-pothix.md
@@ -24,7 +24,7 @@ links:
     name: "Blog do PotHix"
     url: "http://pothix.com/"
   -
-    name: "Livro Descontraindo a web"
+    name: "Livro Desconstruindo a web"
     url: "https://desconstruindoaweb.com.br/"
   -
     name: "ImpactJS Engine HTML5 Game"
@@ -33,7 +33,7 @@ links:
     name: "Akihabara Engine HTML5 Game"
     url: "http://www.kesiev.com/akihabara/"
   -
-    name: "Jigsaw Jogo do PotHix"
+    name: "Skeleton Jigsaw (jogo do PotHix)"
     url: "http://plaev.github.io/skeleton-jigsaw/"
   -
     name: "Get Things Done"
