Some minor fixes for PotHix post

--- a/_posts/2016-10-28-pothix.md
+++ b/_posts/2016-10-28-pothix.md
@@ -11,7 +11,7 @@ soundcloud-id: "290333924"
 soundcloud-post-image: "000190989536-9btpka"
 participants:
   -
-    name: William Molinari
+    name: Willian Molinari
     twitter: pothix
   -
     name: Fellipe Azambuja
@@ -36,7 +36,7 @@ links:
     name: "Skeleton Jigsaw (jogo do PotHix)"
     url: "http://plaev.github.io/skeleton-jigsaw/"
   -
-    name: "Get Things Done"
+    name: "Getting Things Done"
     url: "http://gettingthingsdone.com/"
   -
     name: "Post sobre Audiobooks"
@@ -55,6 +55,6 @@ links:
     url: "http://www.kinesis-ergo.com/shop/advantage-for-pc-mac/"
 ---
 
-@femontanha e @raymonsanches bate um papo com o @pothix (William Molinari), ele conta pra nós um pouco da sua carreira, como começou com a fluencia dos jogos, quando se apaixonou pelo linux, os jogos que ele fez e também algumas manias! Bora ouvir!
+@femontanha e @raymonsanches bate um papo com o @pothix (Willian Molinari), ele conta pra nós um pouco da sua carreira, como começou com a fluencia dos jogos, quando se apaixonou pelo linux, os jogos que ele fez e também algumas manias! Bora ouvir!
 
 {% include modules/post-extras.html %}
