update feed and links ep102

--- a/_posts/2017/2017-04-28-dom.md
+++ b/_posts/2017/2017-04-28-dom.md
@@ -39,8 +39,14 @@ links:
   -
     name: "Adesivos DEVNAESTRADA by StickersDevs"
     url: "https://twitter.com/devnaestrada/status/855045669052182529"
+  -
+    name: "Ajude o WIKILAB a construir o Laboratório de Tecnologias Livre da UFABC"
+    url: "https://www.catarse.me/pt/wikilab"
 ---
 
 Nesse episódio nos juntamos ao @eduardojmatos para falar de um assunto polêmico nos últimos dias nessa internet de meu deus! D.O.M: Desenvolvedor Orientado a Modinha, venha ouvir nossa opinião a respeito de todo esse Hype e também claro dar sua opinião a respeito!
+
+**Ajude o WIKILAB a construir o Laboratório de Tecnologias Livre da UFABC**
+[https://www.catarse.me/pt/wikilab](https://www.catarse.me/pt/wikilab)
 
 {% include modules/post-extras.html data=page %}
