update links DNE 105 DNE Lucas Caton

--- a/_posts/2017/2017-04-28-dom.md
+++ b/_posts/2017/2017-04-28-dom.md
@@ -32,13 +32,13 @@ links:
     url: "https://php.darkmiratour.rocks/2017/"
   -
     name: "Frontinsampa 2017 Typeform"
-    url: "http://bit.ly/dne-frontinsampa2017"
+    url: "http://devnaestrada.com.br/frontinsampa/"
   -
     name: "JS Experience 2017 Typeform"
-    url: "http://bit.ly/dne-jsexperience2017"
+    url: "http://devnaestrada.com.br/jsexperience/"
   -
     name: "Adesivos DEVNAESTRADA by StickersDevs"
-    url: "https://twitter.com/devnaestrada/status/855045669052182529"
+    url: "http://devnaestrada.com.br/stickersdevs/"
   -
     name: "Ajude o WIKILAB a construir o Laboratório de Tecnologias Livre da UFABC"
     url: "https://www.catarse.me/pt/wikilab"
