--- a/_posts/2017/2017-06-22-pwa.md
+++ b/_posts/2017/2017-06-22-pwa.md
@@ -37,6 +37,8 @@ links:
 
 Neste episódio [@femontanha](https://twitter.com/femontanha), [@raymonsanches](https://twitter.com/raymonsanches), [@eduardojmatos](https://twitter.com/@eduardojmatos) e [@cmilfont](https://twitter.com/@cmilfont) falam um pouco sobre PWA - Progressive Web Apps. O que são? Onde vivem? Do que se alimentam? Funcionam offline?
 
+<img src="http://www.italki.com/static/svg/landing-logo.svg" width="50" style="vertical-align:middle; margin-right: 10px" /> Compre uma aula e ganhe outra grátis: [http://go.italki.com/devnaestrada](http://go.italki.com/devnaestrada)
+
 CUPOM 30% BRAZILJS POA: `dev-na-estrada-2017-poa`
 
 CUPOM 30% BRAZILJS FORTALEZA: `dev-na-estrada-2017-fortaleza`
