fix BrazilJS links

--- a/_posts/2018/2018-03-30-ethereum.md
+++ b/_posts/2018/2018-03-30-ethereum.md
@@ -64,7 +64,7 @@ scraps:
     url: "https://www.brasiliadevfestival.com.br"
   -
     name: "BraziLJS OnTheRoad"
-    link: "https://braziljs.org/eventos/on-the-road-sorocaba"
+    url: "https://braziljs.org/eventos/on-the-road-sorocaba"
 
 ---
 
