--- a/_posts/2018/2018-06-01-vanhackaton-2018.md
+++ b/_posts/2018/2018-06-01-vanhackaton-2018.md
@@ -6,7 +6,7 @@ type: "Pauta"
 cast: "dne-vanhack-prod.mp3"
 cast-length: "44486727"
 cast-time: "00:46:16"
-description: "GIANT Recruiting Fair with Canadian Companies in São Paulo. Join us in São Paulo on June 23rd & 24th for a weekend long recruiting fair and get hired at top tech companies in Canada."
+description: "GIANT Recruiting Fair with Canadian Companies in São Paulo. Join us in São Paulo on June 23rd and 24th for a weekend long recruiting fair and get hired at top tech companies in Canada."
 libsyn-image: "dne-vanhack-capa.jpg"
 lybsyn-id: "6656836"
 sponsors: ["vanhack"]
