Adding missing link of GetNinjas

--- a/_posts/2018/2018-12-21-fim-de-ano.md
+++ b/_posts/2018/2018-12-21-fim-de-ano.md
@@ -15,6 +15,8 @@ participants:
 ---
 Parece que o inevitável fim de ano que nunca deixará de chegar, chegou. E nesse episódio especial convidamos algumas pessoas pra falar um pouquinho do que foi 2018 e o que esperam do próximo ano que está aí.
 
+Link pra vagas no [GetNinjas #TrabalheComEdu](https://jobs.kenoby.com/getninjas).
+
 *siga a gente no Twitter [Twitter](https://twitter.com/devnaestrada) e [Instagram](https://instagram.com/devnaestrada) pra saber sobre mais interações como essas nos episódios posteriores!
 
 ---
