Fixing thumbnail of 200 ep

--- a/_posts/2019/2019-04-05-especial-200.md
+++ b/_posts/2019/2019-04-05-especial-200.md
@@ -7,7 +7,7 @@ cast: "DNE200.mp3"
 cast-length: "34114188"
 cast-time: "00:38:35"
 description: "Chegamos a DUZENTOS episódios no devnaestrada! E pra comemorar isso decidimos chamar ouvintes que se inscreveram num evento especial, e gravamos histórias, comentários e coisas bacanas que rolaram nesse longo período de podcast! Vem com a gente comemorar esses 200 programas!"
-libsyn-image: "dne200-capa.jpg"
+libsyn-image: "dne200-capa-2.jpg"
 lybsyn-id: "9281990"
 sponsors: ["cubo", "revelo"]
 participants:
