Fixing spaces after cupom's list

--- a/_posts/2019/2019-04-05-especial-200.md
+++ b/_posts/2019/2019-04-05-especial-200.md
@@ -29,9 +29,9 @@ scraps:
 
 Chegamos a DUZENTOS episódios no devnaestrada! E pra comemorar isso decidimos chamar ouvintes que se inscreveram num evento especial, e gravamos histórias, comentários e coisas bacanas que rolaram nesse longo período de podcast! Vem com a gente comemorar esses 200 programas!
 
-<strong>CUPOM STICKERSDEVS 15%: DEVNAESTRADA</strong>
-<strong>CapiConf com 30%: DNE30</strong>
-<strong>FrontinSampa com 20%: DNEESPECIAL200</strong>
+<strong>CUPOM STICKERSDEVS 15%: DEVNAESTRADA</strong><br/>
+<strong>CapiConf com 30%: DNE30</strong><br/>
+<strong>FrontinSampa com 20%: DNEESPECIAL200</strong><br/>
 
 ---
 
