--- a/_posts/2019/2019-08-16-feedback.md
+++ b/_posts/2019/2019-08-16-feedback.md
@@ -8,7 +8,7 @@ cast-length: "54651819"
 cast-time: "00:56:52"
 description: "No episódio de hoje @eduardojmatos e @raymonsanches falam sobre a importância do feedback, avaliam algumas técnicas e métodos para fornecer um bom feedback e como sempre também trazem suas opiniões e vivências para essa discussão. Só vamos!"
 libsyn-image: "dne219-capa.jpg"
-lybsyn-id: "10836095"
+lybsyn-id: "10898197"
 sponsors: ["cubo", "revelo"]
 participants:
   -
@@ -20,9 +20,11 @@ participants:
 
 scraps:
   -
-    name: "Conferência Web.br"
-    url: "https://conferenciaweb.w3c.br"
+    name: "Feedback Wrap"
+    url: "https://management30.com/practice/feedback-wraps/"
   -
+    name: "Please stop using the feedback sandwich"
+    url: "https://www.forbes.com/sites/alisacohn/2017/06/20/please-stop-using-the-feedback-sandwich/#2d1ce07d7945"
 ---
 
 No episódio de hoje @eduardojmatos e @raymonsanches falam sobre a importância do feedback, avaliam algumas técnicas e métodos para fornecer um bom feedback e como sempre também trazem suas opiniões e vivências para essa discussão. Só vamos!
