Fixing twitter of DNE 261 participants

--- a/_posts/2020/2020-07-02-graphql.md
+++ b/_posts/2020/2020-07-02-graphql.md
@@ -13,13 +13,13 @@ sponsors: ["revelo"]
 participants:
   -
     name: Emilio Aiolfi
-    link: emilioaiolfi
+    twitter: emilioaiolfi
   -
     name: Mario Souto
-    link: omariosouto
+    twitter: omariosouto
   -
     name: Matheus Marsiglio
-    link: mtmr0x
+    twitter: mtmr0x
   -
     name: Eduardo Matos
     twitter: eduardojmatos
@@ -28,7 +28,7 @@ participants:
     twitter: raymonsanches
   -
     name: Willian Arantes
-    link: warantesbr
+    twitter: warantesbr
 
 links:
   -
