changes links on dne-268

--- a/_posts/2020/2020-08-28-flutter.md
+++ b/_posts/2020/2020-08-28-flutter.md
@@ -42,10 +42,10 @@ links:
     name: "Flutter Talks 2019 - O maior evento de Flutter e Dart do Brasil"
     url: https://www.fluttertalks.com.br/
   -
-    name: "Flutter Comunidade BR"
-    url: https://github.com/FlutterComunidadeBR
+    name: "Flutter BR Vagas"
+    url: https://github.com/flutterbr/vagas
   -
-    name: "Meetup Flutter BR (SP)"
+    name: "Meetup Flutter BR"
     url: https://www.meetup.com/pt-BR/flutterbr/
   -
     name: "awkay/easy-i18n"
