more changes to links on dne-268

--- a/_posts/2020/2020-08-28-flutter.md
+++ b/_posts/2020/2020-08-28-flutter.md
@@ -48,8 +48,8 @@ links:
     name: "Meetup Flutter BR"
     url: https://www.meetup.com/pt-BR/flutterbr/
   -
-    name: "awkay/easy-i18n"
-    url: https://github.com/awkay/easy-i18n
+    name: "Easy_i18n"
+    url: https://pub.dev/packages/easy_i18n
   -
     name: "Simplifique sua comunicação com Hubblefy"
     url: https://hubblefy.com/
