adds plushy - dart mascot

--- a/_posts/2020/2020-08-28-flutter.md
+++ b/_posts/2020/2020-08-28-flutter.md
@@ -39,6 +39,9 @@ links:
     name: "Fuchsia.dev"
     url: https://fuchsia.dev/
   -
+    name: "Plushy - O mascote do Dart"
+    url: https://youtu.be/R5vIUjRZaZA
+  -
     name: "Flutter Talks 2019 - O maior evento de Flutter e Dart do Brasil"
     url: https://www.fluttertalks.com.br/
   -
