Removing partner on specific episodes

--- a/_posts/2020/2020-10-09-css-in-js.md
+++ b/_posts/2020/2020-10-09-css-in-js.md
@@ -9,7 +9,7 @@ cast-time: "00:50:08"
 description: "Sextou!!! E sexta é dia de DNE! Dessa vez nossa guilda de frontend se reuniu pra trazer mais um episódio com uma discussão bacana sobre o arquitetura e ferramentas do mundo frontend: CSS no JavaScript! Quais as vantagens? Quando usar ou não? Venha ouvir e não esqueça de deixar sua opinião em nosso Twitter @devnaestrada."
 libsyn-image: "dne274-capa.jpg"
 lybsyn-id: "16335659"
-sponsors: ["revelo", "locawebpro"]
+sponsors: ["revelo"]
 participants:
   -
     name: Emilio Aiolfi
