DNE 332 - Série: TC39 #3 - fix text

--- a/_posts/2022/2022-04-29-tc39-3.md
+++ b/_posts/2022/2022-04-29-tc39-3.md
@@ -7,7 +7,7 @@ cast: "DNE_332.mp3"
 cast-length: "65366207"
 cast-time: "01:08:05"
 description: |
-  Como as redes sociais influenciam as discussões do plenário? No episódio de hoje Mario Souto, Keit e Willian Martins discutem algumas das propostas que tiverem de uma forma ou de outra, influencia das reses sociais, outras propostas e todos continuam com o objetivo de derreter cérebros.
+  Como as redes sociais influenciam as discussões do plenário? No episódio de hoje, Mario Souto, Keit e Willian Martins discutem algumas das propostas que tiverem de uma forma ou de outra, influencia das reses sociais, outras propostas e todos continuam com o objetivo de derreter cérebros.
 libsyn-image: "dne-capa-332.png"
 lybsyn-id: "22940972"
 sponsors: ["revelo"]
@@ -29,7 +29,7 @@ links:
 
 ---
 
-Como as redes sociais influenciam as discussões do plenário? No episódio de hoje Mario Souto, Keit e Willian Martins discutem algumas das propostas que tiverem de uma forma ou de outra, influencia das reses sociais, outras propostas e todos continuam com o objetivo de derreter cérebros.
+Como as redes sociais influenciam as discussões do plenário? No episódio de hoje, Mario Souto, Keit e Willian Martins discutem algumas das propostas que tiverem de uma forma ou de outra, influencia das reses sociais, outras propostas e todos continuam com o objetivo de derreter cérebros.
 
 <strong>CUPOM STICKERSDEVS 15%: DEVNAESTRADA</strong>
 
