DNE 381 - Dev Junior em 2023 - 2

--- a/_posts/2023/2023-05-26-dev-Junior-em-2023.md
+++ b/_posts/2023/2023-05-26-dev-Junior-em-2023.md
@@ -7,7 +7,7 @@ cast: "DNE_381.mp3"
 cast-length: "67742764"
 cast-time: "01:08:39"
 description: | 
-  Como está o mercado para pessoas desenvolvedoras junior? Edu e Emilio se juntam mais uma vez pra falar sobre a perspectiva deles para quem está começando na área, os desafios, as vagas, a dura realidade e algumas dicas pra encarar esse nível inicial.
+  Como está o mercado para pessoas desenvolvedoras junior? Eduardo Matos e Emilio Aiolfi se juntam mais uma vez pra falar sobre a perspectiva deles para quem está começando na área, os desafios, as vagas, a dura realidade e algumas dicas pra encarar esse nível inicial.
 
 libsyn-image: "DEV_JUNIOR_EM_2023.png"
 lybsyn-id: "26951406"
@@ -32,7 +32,7 @@ links:
 
 ---
 
-Como está o mercado para pessoas desenvolvedoras junior? Edu e Emilio se juntam mais uma vez pra falar sobre a perspectiva deles para quem está começando na área, os desafios, as vagas, a dura realidade e algumas dicas pra encarar esse nível inicial.
+Como está o mercado para pessoas desenvolvedoras junior? Eduardo Matos e Emilio Aiolfi se juntam mais uma vez pra falar sobre a perspectiva deles para quem está começando na área, os desafios, as vagas, a dura realidade e algumas dicas pra encarar esse nível inicial.
 
 ---
 
